testdata/baselines/reference/submodule/compiler/duplicateIdentifierRelatedSpans6.errors.txt
[96mfile2.ts[0m:[93m3[0m:[93m16[0m - [91merror[0m[90m TS2664: [0mInvalid module name in augmentation, module 'someMod' cannot be found.

[7m3[0m declare module "someMod" {
[7m [0m [91m               ~~~~~~~~~[0m


==== file2.ts (1 errors) ====
    /// <reference path="./file1" />
    
    declare module "someMod" {
                   ~~~~~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'someMod' cannot be found.
        export interface TopLevel {
            duplicate1(): number;
            duplicate2(): number;
            duplicate3(): number;
        }
    }
    export {};
    
==== file1.ts (0 errors) ====
    declare module "someMod" {
        export interface TopLevel {
            duplicate1: () => string;
            duplicate2: () => string;
            duplicate3: () => string;
        }
    }
Found 1 error in file2.ts[90m:3[0m

